--- a/HW1/all_answers.html
+++ b/HW1/all_answers.html
@@ -12,7 +12,7 @@
 
 <h1>Check the console for the last name</h1>
     <!-- Answer for task 2 -->
-    <script src="2_4_5.js"></script>
+    <script src="all_answers.js"></script>
 
 </body>
 </html>
