--- a/HW4/hw4.html
+++ b/HW4/hw4.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Check the console for answers</h1>
+<h1>Check console for the answers</h1>
     <script src="hw4.js"></script>
 
 </body>
